# fenwick-tracker

./: CMakeLists.txt  LICENSE  README.md
app/: main.cpp
code/: Fenwick.cpp  Fenwick.h
data/: intraday.csv
